[project]
name = "pyd2d"
version = "0.2.0"
description = "A Python wrapper for the Windows Direct2D and DirectWrite APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/merlinz01/pyd2d"
Repository = "https://github.com/merlinz01/pyd2d"
Issues = "https://github.com/merlinz01/pyd2d/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[build-system]
requires = ["setuptools>=75", "cython>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
exclude-package-data = { pyd2d = ["*.pyx"] }

[[tool.setuptools.ext-modules]]
name = "pyd2d"
sources = ["src/pyd2d.pyx"]
language = "c++"
libraries = ["d2d1", "dwrite", "ole32", "windowscodecs"]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF022", "SIM"]
